--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 					</div>	
 					<div class="box-atividade">
 						<div class="col-lg-6 imgdest no-padding">
-							<div class="imagematividade jarallax" style="background: url(assets/img/contato.jpg)no-repeat;">
+							<div class="imagematividade jarallax" style="background: url(assets/img/contato.JPG)no-repeat;">
 							</div>
 						</div>
 						<div class="descricaoatividade col-lg-6">
