--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 					</div>	
 					<div class="box-atividade">
 						<div class="col-lg-6 imgdest no-padding">
-							<div class="imagematividade jarallax" style="background: url(assets/img/contato.jpg)no-repeat;">
+							<div class="imagematividade jarallax" style="background: url(assets/img/contato.JPG)no-repeat;">
 							</div>
 						</div>
 						<div class="descricaoatividade col-lg-6">
@@ -197,7 +197,6 @@
     <!-- Jarallax -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jarallax/1.9.0/jarallax.min.js"></script>
 	<!-- Include it if you want to use Video parallax -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jarallax/1.9.0/jarallax-video.min.js"></script>  
     <script src="assets/js/main.js"></script>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
