--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
                 </div>
                 <div id="menu">
                     <ul class="nav navbar-nav">
-                        <li class="hidden-sm"><a href="">Serviços</a></li>
-                        <li><a href="">Histórias de sucesso</a></li>
-                        <li><a href="">Parceiros</a></li>
-                        <li><a href="">Carreira</a></li>
-                        <li><a href="">Contato</a></li>
+                        <li><a href="#servicos">Serviços</a></li>
+                        <li><a href="#historia">Histórias de sucesso</a></li>
+                        <li><a href="#parceiros">Parceiros</a></li>
+                        <li><a href="#carreira">Carreira</a></li>
+                        <li><a href="#contato">Contato</a></li>
                     </ul>
                 </div>
             </div>
@@ -94,7 +94,7 @@
 						</div>
 						<div class="clear"></div>
 					</div>								
-					<div class="box-atividade">
+					<div class="box-atividade" id="historia">
 						<div class="col-lg-6 imgdest no-padding">
 							<div class="imagematividade jarallax" style="background: url(assets/img/serv2.jpg)no-repeat;">
 							</div>
@@ -107,7 +107,7 @@
 						</div>
 						<div class="clear"></div>
 					</div>
-					<div class="box-atividade">
+					<div class="box-atividade" id="parceiros">
 						<div class="col-lg-6 imgdest no-padding">
 							<div class="imagematividade jarallax" style="background: url(assets/img/serv4.jpg)no-repeat;">
 							</div>
@@ -125,7 +125,7 @@
 						</div>
 						<div class="clear"></div>
 					</div>		
-					<div class="box-atividade">
+					<div class="box-atividade" id="carreira">
 						<div class="col-lg-6 imgdest no-padding">
 							<div class="imagematividade jarallax" style="background: url(assets/img/serv5.jpg)no-repeat;">
 							</div>
@@ -141,7 +141,7 @@
 						</div>
 						<div class="clear"></div>
 					</div>	
-					<div class="box-atividade">
+					<div class="box-atividade" id="contato">
 						<div class="col-lg-6 imgdest no-padding">
 							<div class="imagematividade jarallax" style="background: url(assets/img/contato.JPG)no-repeat;">
 							</div>
